<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/nombre"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/Nombre"
        android:inputType="text"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="16dp" />


    <DatePicker
        android:id="@+id/datepicker"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp">


    </DatePicker>


    <EditText
        android:id="@+id/telefono"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/Telefono"
        android:inputType="phone"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="16dp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/DescripcionContacto"
        android:inputType="text"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="16dp" />


    <Button
        android:id="@+id/BotonSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="150dp"
        android:hint="@string/BotonSiguiente"
        android:textColorHint="@color/white">


    </Button>
</LinearLayout>